--- a/list.html
+++ b/list.html
@@ -47,12 +47,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.php"><img src="images/logo.png" alt="logo"></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
-                    <li class="scroll"><a href="index.html">Home</a></li>
+                    <li class="scroll"><a href="index.php">Home</a></li>
                     <li class="scroll"><a href="" data-toggle="modal" data-target="#searchModal">Search</a></li>
                     <li class="scroll"><a href="" data-toggle="modal" data-target="#registerModal">Register</a></li>
                     <li class="scroll"><a href="" data-toggle="modal" data-target="#signInModal">Sign in</a></li>
