--- a/list.html
+++ b/list.html
@@ -61,6 +61,257 @@
                     <li class="scroll active"><a href="list.html">Hospitals & Doctors</a></li>
                 </ul>
             </div>
+            <!-- Register Modal -->
+            <div id="registerModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Registration</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="fluid-container">
+                                <h2>Register a Patient/Hospital</h2>
+
+                                <ul class="nav nav-tabs">
+                                    <li class="active"><a data-toggle="tab" href="#patient">Patient</a></li>
+                                    <li><a data-toggle="tab" href="#hospital">Hospital</a></li>
+
+                                </ul>
+
+                                <div class="tab-content">
+                                    <div id="patient" class="tab-pane fade in active">
+                                        <h3>Register a patient</h3>
+                                        <form id="regist-form"
+                                              action="<?php echo htmlspecialchars( "register.php" ); ?>" method="post">
+
+                                        <input type='hidden' name='submitted' id='submitted' value='1'/>
+
+                                        <!--                                                Name-->
+                                        <div class="form-group">
+                                            <label for="fname">Your first name:</label>
+                                            <input name="fname" type="text" class="form-control" id="fname">
+                                            <label for="lname">Your last name:</label>
+                                            <input name="lname" type="text" class="form-control" id="lname">
+                                        </div>
+
+                                        <!--                                                ID-->
+                                        <div class="form-group">
+                                            <label for="patient__id">Your ID:</label>
+                                            <input name="id" type="text" class="form-control" id="id">
+                                            <!--                                                Email-->
+                                            <div class="form-group">
+                                                <label for="email">Your email:</label>
+                                                <input name="patient_email" type="email" class="form-control"
+                                                       id="email">
+                                            </div>
+
+                                            <!--                                                Password-->
+                                            <div class="form-group">
+                                                <label for="passwd">Password:</label>
+                                                <input name="password" type="password" class="form-control"
+                                                       id="passwd">
+                                            </div>
+
+                                            <!--                                                Address-->
+                                            <div class="form-group">
+                                                <label for="patient__add">Address:</label>
+                                                <input name="address" type="text" class="form-control"
+                                                       id="patient_add">
+                                            </div>
+
+                                            <!--                                                Gender-->
+                                            <div class="radio">
+                                                <label><input type="radio" name="optradio"
+                                                              checked="checked" value="Male">Male </label>
+                                            </div>
+                                            <div class="radio">
+                                                <label><input type="radio" name="optradio" value="Female">Female
+                                                </label>
+                                            </div>
+                                            <div class="radio">
+                                                <label><input type="radio" name="optradio" value="Others">Others
+                                                </label>
+                                            </div>
+
+                                            <!--                                                Languages-->
+                                            <div class="form-group">
+                                                <label for="input__language">Language</label>
+                                                <select name="lang" id="input__language" class="form-control">
+                                                    <option selected value="vietnamese">Vietnamese</option>
+                                                    <option value="english">English</option>
+                                                </select>
+                                            </div>
+
+                                            <button name="register" type="submit" class="btn btn-primary">Register
+                                            </button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <!--                                        Hospital-->
+                                    <div id="hospital" class="tab-pane fade">
+                                        <h3>Register a hospital</h3>
+                                        <form id="regist-form-hospital"
+                                              action="<?php echo htmlspecialchars( "register-hospital.php" ); ?>"
+                                        method="post">
+
+                                        <!--                                                Name-->
+
+                                        <div class="form-group">
+                                            <label for="hospital__name">Hospital Name:</label>
+                                            <input name="hosname" type="text" class="form-control"
+                                                   id="hospital__name">
+                                        </div>
+
+                                        <!--                                                ID-->
+                                        <div class="form-group">
+                                            <label for="hospital__id">Hospital ID:</label>
+                                            <input name="hosid" type="text" class="form-control" id="hospital__id">
+                                        </div>
+
+                                        <!--                                                Password-->
+                                        <div class="form-group">
+                                            <label for="hospital__pwd">Hospital Password:</label>
+                                            <input name="hospwd" type="password" class="form-control"
+                                                   id="hospital__pwd">
+                                        </div>
+
+                                        <!--                                                Address-->
+                                        <div class="form-group">
+                                            <label for="hospital__add">Address:</label>
+                                            <input name="hosadd" type="text" class="form-control"
+                                                   id="hospital__add">
+                                        </div>
+
+                                        <!--Hospital Admin Name-->
+                                        <div class="form-group">
+                                            <label for="hospital__admin--name">Hospital Admin Name:</label>
+                                            <input name="hosadmin" type="text" class="form-control"
+                                                   id="hospital__admin--name">
+                                        </div>
+
+                                        <!--Hospital Admin Email-->
+                                        <div class="form-group">
+                                            <label for="hospital__admin--email">Hospital Admin Email:</label>
+                                            <input name="hosemail" type="email" class="form-control"
+                                                   id="hospital__admin--email">
+                                        </div>
+                                        <button name="hosregister" type="submit" class="btn btn-primary">Submit</button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sign in Modal -->
+            <div id="signInModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Sign in</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="fluid-container">
+                                <h2>Sign in as a Patient/Hospital</h2>
+
+                                <ul class="nav nav-tabs">
+                                    <li class="active"><a data-toggle="tab" href="#patient__signin">Patient</a></li>
+                                    <li><a data-toggle="tab" href="#hospital__signin">Hospital</a></li>
+
+                                </ul>
+
+                                <div class="tab-content">
+                                    <div id="patient__signin" class="tab-pane fade in active">
+                                        <h3>Sign in as a patient</h3>
+                                        <form id="patient__signin" action="<?php echo htmlspecialchars( "login.php" ); ?>"
+                                        method="post">
+
+                                        <!--                                                ID-->
+                                        <div class="form-group">
+                                            <label for="patientid">Your ID:</label>
+                                            <input name="myid" type="text" class="form-control" id="patientid">
+                                        </div>
+
+                                        <!--                                                Password-->
+                                        <div class="form-group">
+                                            <label for="pwd">Password:</label>
+                                            <input name="mypwd" type="password" class="form-control" id="pwd">
+                                        </div>
+
+                                        <button name="patient_login" type="submit" class="btn btn-primary">Sign in
+                                        </button>
+                                        </form>
+                                    </div>
+
+                                    <!--                                        Hospital-->
+                                    <div id="hospital__signin" class="tab-pane fade">
+                                        <h3>Sign in as a hospital</h3>
+                                        <form id="hospital__signin"
+                                              action="<?php echo htmlspecialchars( "login-hospital.php" ); ?>"
+                                        method="POST">
+
+
+                                        <!--                                                Name-->
+
+                                        <!--                                        <div class="form-group">-->
+                                        <!--                                            <label for="hospitalname">Hospital Name:</label>-->
+                                        <!--                                            <input type="text" class="form-control" id="hospitalname">-->
+                                        <!--                                        </div>-->
+
+                                        <!--                                                ID-->
+                                        <div class="form-group">
+                                            <label for="hospitalid">Hospital ID:</label>
+                                            <input name="hospital-id" type="text" class="form-control" id="hospitalid">
+                                        </div>
+
+                                        <!--                                    Password-->
+                                        <div class="form-group">
+                                            <label for="hospitalpwd">Hospital Password:</label>
+                                            <input name="hospital-pwd" type="password" class="form-control"
+                                                   id="hospitalpwd">
+                                        </div>
+
+                                        <!--                                        Hospital Admin Name-->
+                                        <!--                                        <div class="form-group">-->
+                                        <!--                                            <label for="hospitaladmin--name">Hospital Admin Name:</label>-->
+                                        <!--                                            <input type="email" class="form-control" id="hospitaladmin--name">-->
+                                        <!--                                        </div>-->
+                                        <!--                                        Hospital Admin Email-->
+                                        <!--                                        <div class="form-group">-->
+                                        <!--                                            <label for="hospitaladmin--email">Hospital Admin Email:</label>-->
+                                        <!--                                            <input type="email" class="form-control" id="hospitaladmin--email">-->
+                                        <!--                                        </div>-->
+
+                                        <button name="login_hos" type="submit" class="btn btn-primary">Sign in</button>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-warning" data-toggle="modal"
+                                            data-target="#resetModal">Forgot your password?
+                                    </button>
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </nav>
 </header>
